--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body{
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    background: url(https://github.com/sabbir-bipu/login_form/blob/master/img/bg.jpg) no-repeat;
+    background: url(../img/bg.jpg) no-repeat;
     background-size: cover;
   }
 
