--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ body{
   }
   .login i{
     width: 26px;
-    font-size: 26px
+    font-size: 26px;
     float: left;
     text-align: center;
   }
